Add DDI for blockchain
